<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logic.Settings.Settings">

    <TextView
        android:id="@+id/tvSettingsCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginStart="135dp"
        android:text="@string/CityQuestion"/>

    <EditText
        android:id="@+id/etSettingsCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="135dp"
        android:text=""/>

    <TextView
        android:id="@+id/tvSettingsStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_marginStart="135dp"
        android:text="@string/StreetQuestion"/>

    <EditText
        android:id="@+id/etSettingsStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="135dp"
        android:text=""/>

    <TextView
        android:id="@+id/tvSettingsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="375dp"
        android:layout_marginStart="135dp"
        android:text="@string/NumberQuestion"/>

    <EditText
        android:id="@+id/etSettingsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginStart="135dp"
        android:text=""/>

    <Button
        android:id="@+id/btnSettingsBackToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveAndBack"
        android:layout_marginTop="525dp"
        android:layout_marginStart="100dp"/>

</RelativeLayout>